basic structure for html and css completed

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 </head>
 <body>
     <h1>Password Generator</h1>
+    <div class="container">
+        <div class="password-card">
+            <h2>Generate a Password</h2>
+            <br>
+            <hr>
+            <div class="typebox">
+                <p>Your Secure Password</p>
+            </div>
+            <hr>
+            <button class="button">Generate Password</button>
+        </div>
+    </div>
     
 <script src="style.js"></script>
 </body>
