character array and initital promt complete. moving on to the next promts, storage, and random generationof pw on page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <br>
             <hr>
             <div class="typebox">
-                <p>Your Secure Password</p>
+                <p id="user-history">Your Secure Password</p>
             </div>
             <hr>
             <button class="button">Generate Password</button>
