finally figured out the function togenerate the new password once the button is clicked.

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <br>
             <hr>
             <div class="typebox">
-                <p id="user-history">Your Secure Password</p>
+                <p id="passWD-text">Your Secure Password</p>
             </div>
             <hr>
-            <button class="button">Generate Password</button>
+            <button onclick="generatePW()">Generate Password</button>
         </div>
     </div>
     
