Coming back to add styling and copy to clipbaord function

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <br>
             <hr>
             <div class="typebox">
-                <p id="passWD-text">Your Secure Password</p>
+            <p id="passWD-text">Your Secure Password</p>
             </div>
             <hr>
-            <button onclick="generatePW()">Generate Password</button>
+            <button class="btn btn-danger" onclick="generatePW()">Generate Password</button>
         </div>
     </div>
     
