--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
     <title>Password Generator</title>
 </head>
 <body>
+
+<div class="container mx-auto">
+<div class="row">
+    <div class="col-sm-12 col-md-12 mx-auto">
     <h1>Password Generator</h1>
+    </div>
+</div>
+</div>
     <br>
     <br>
-    <div class="container">
+
+<div class="container-2">
+        <div class="row">
+        <div class="col-sm-12 col-md-12">
         <div class="password-card">
             <h2>Generate a Password</h2>
             <br>
@@ -21,10 +31,11 @@
             <p id="passWD-text">Your Secure Password</p>
             </div>
             <hr>
-            <button class="btn btn-danger" onclick="generatePW()">Generate Password</button>
+            <button class="btn btn-danger ml-40px" onclick="generatePW()">Generate Password</button>
         </div>
     </div>
-    
+    </div>
+</div>
 
     
 
