corecting an error I spoted in the read me.

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Password Generator</title>
 </head>
-<body>
+<body class="bg-light">
 
 <div class="container mx-auto">
 <div class="row">
     <div class="col-sm-12 col-md-12 mx-auto">
-    <h1>Password Generator</h1>
+    <h1><strong>Password Generator</strong></h1>
     </div>
 </div>
 </div>
@@ -25,13 +25,12 @@
         <div class="col-sm-12 col-md-12">
         <div class="password-card">
             <h2>Generate a Password</h2>
-            <br>
             <hr>
             <div class="typebox">
             <p id="passWD-text">Your Secure Password</p>
             </div>
             <hr>
-            <button class="btn btn-danger ml-40px" onclick="generatePW()">Generate Password</button>
+            <button class="btn btn-danger" onclick="generatePW()">Generate Password</button>
         </div>
     </div>
     </div>
